Fixed bug with tags updating, changed spinner z-index and changed table cells width

--- a/frontend/ATS/src/app/applicants/components/applicants/applicants.component.scss
+++ b/frontend/ATS/src/app/applicants/components/applicants/applicants.component.scss
@@ -87,8 +87,7 @@ $primary-color: #ee2a64;
 
     &:not(.control-buttons-cell) {
       min-width: 0px;
-      max-width: 300px;
-      width: fit-content;
+      max-width: 200px;
       position: relative;
 
       overflow: hidden;
@@ -106,11 +105,14 @@ $primary-color: #ee2a64;
 
     &.tags-list-cell {
       overflow: visible;
-      max-width: 400px;
+      width: fit-content;
+      max-width: 300px;
     }
 
     &.jobs-list-cell {
       overflow: visible;
+      width: fit-content;
+      max-width: none;
     }
 
     .mat-list-base {
@@ -124,6 +126,8 @@ $primary-color: #ee2a64;
     .jobs-list {
       overflow-y: hidden;
       height: min-content;
+      width: fit-content;
+      max-width: none;
 
       max-height: $row-height - 15px;
       margin: auto 0;
@@ -193,6 +197,7 @@ $primary-color: #ee2a64;
       margin-left: -3px;
       display: flex;
       flex-wrap: wrap;
+      width: fit-content;
       align-content: center;
       overflow: hidden;
 
